Fix z-index of icon popups

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -29,6 +29,7 @@
   margin-bottom:12px;
   transition: .3s;
   position:relative;
+  z-index: 2;
 }
 
 .mtgnote{
